2008-10-06  Keiki SHIMADA  <shimada-k aist.go.jp>

	* lib/qwik/act-files.rb: Force download attached html files, Add
	case-insensitive check for compromise file extentions.
	

2008-09-04  Keiki Shimada  <shimada-k aist.go.jp>

	* lib/qwik/farm.rb, lib/qwik/server.rb, lib/qwik/site-group.rb:
	Add logging bury info to log/bury.log
	
2008-07-30  Keiki Shimada <shimada-k aist.go.jp>
	* lib/qwik/group-site.rb, lib/qwik/test-submit-japanese.rb:
	Support various charsets

2008-07-29  Keiki Shimada <shimada-k aist.go.jp>

	* lib/qwik/db-backup.rb, lib/qwik/db-filesystem.rb,
	  lib/qwik/db-indexer.rb, lib/qwik/group-config.rb,
	  lib/qwik/group-db.rb, lib/qwik/page-files.rb,
	  lib/qwik/page-images.rb, lib/qwik/site-files.rb: Use './.test/'
	  directory for test

2008-07-28  Kouichirou Eto  <2008 eto.com>

	* lib/qwik/db-backup.rb: Fix bug in IGNORE_PAGES.

2008-07-25  Keiki Shimada <shimada-k aist.go.jp>

	* lib/qwik/db-backup.rb: Do not backup counter pages

2008-07-25  Keiki Shimada <shimada-k aist.go.jp>

	* lib/qwik/ml-processor.rb, lib/qwik/test-ms-ignore-spam.rb: move
	  one test case

2008-07-23  Keiki Shimada <shimada-k aist.go.jp>

	* lib/qwik/act-sitebackup.rb: change test to follow the previous
	  commit

2008-07-23  eto

	* lib/qwik/act-sitebackup.rb: Support symbolic link.

2008-07-22  Keiki Shimada <shimada-k aist.go.jp>

	* lib/qwik/test-module-server.rb: fix bug: using real data/test/
	  directory at test suite

2008-07-16  Keiki Shimada <shimada-k aist.go.jp>

	* share/theme/css/base.css: remove unused style

2008-07-09  Keiki Shimada <shimada-k aist.go.jp>

	* lib/qwik/act-sitebackup.rb: remove unused REQUIRE statement

2008-07-09  Keiki Shimada <shimada-k aist.go.jp>

	* lib/qwik/act-sitebackup.rb: change path to tar command

2008-07-08  Keiki Shimada <shimada-k aist.go.jp>

	* lib/qwik/act-edit.rb, lib/qwik/act-sitebackup.rb: rewrite
	  sitebackup

2008-07-02  Keiki Shimada <shimada-k aist.go.jp>
